# spectral_rs

./: .gitignore  .travis.yml  1  :q  :w  Cargo.toml  README.md  config.toml  config.toml~  config.yml  plotter.py  tmp.rs
benches/: my_bench.rs
scratch/: binomial_filter_checker.py  fft2d_gen.py  fft_1d_checker.txt  fft_2d_checker.txt  fft_gen.py
src/: flds.rs  init.rs  lib.rs  main.rs  prtls.rs  simulation.rs
src/flds/: binomial_filter.rs  fft_2d.rs  field.rs  fields_tests.rs  ghosts.rs  mod.rs  wave_num.rs
src/prtls/: mod.rs
src/save/: mod.rs
tests/: fields_tests.rs
tests/common/: mod.rs
