[package]
name = "spectral_rs"
version = "0.1.0"
authors = ["Patrick Crumley <patrick.crumley@gmail.com>"]
edition = "2018"

[dependencies]
rayon = "1.1"
rand_distr = "0.2.1"
rand = "0.7"
itertools = "0.8.0"
lazy_static = "1.3.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
#ndarray = "0.12.1"

[dev-dependencies]
criterion = "0.2"

[features]
unsafe = []
#dprec = [] # not yet implemented


[[bench]]
name = "my_bench"
harness = false
