[package]
name = "spectral_rs"
version = "0.1.0"
authors = ["Patrick Crumley <patrick.crumley@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
rayon = "1.5"
rand_distr = "0.4.0"
rand = "0.8"
itertools = "0.10.0"
#lazy_static = "1.3.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
#ndarray = "0.12.1"
#hdf5 = "0.5.1"
npy = "0.4"
npy-derive = "0.4"
num-traits = "0.2.14"
rustfft = "5.0.0"

[dev-dependencies]
criterion = "0.2"

[features]
default = ["unchecked"]
unchecked = []
dprec = [] 



[[bench]]
name = "my_bench"
harness = false
